--- a/View/Modelo130.html.twig
+++ b/View/Modelo130.html.twig
@@ -108,7 +108,7 @@
                 <div class="col">
                     <div class="form-group">
                         {#{{ i18n.trans('tax-base') }}#}
-                        Ventas - Compras
+                        {{ i18n.trans('sales') }} - {{ i18n.trans('purchases') }}
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">03</span>
@@ -146,12 +146,12 @@
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">
-                        <i class="far fa-copy fa-fw"></i> {{ i18n.trans('customer-invoices') }}
+                        <i class="far fa-copy fa-fw"></i> {{ i18n.trans('sales') }}
                     </a>
                 </li>
                 <li class="nav-item" role="presentation">
                     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">
-                        <i class="far fa-copy fa-fw"></i> {{ i18n.trans('supplier-invoices') }}
+                        <i class="far fa-copy fa-fw"></i> {{ i18n.trans('purchases') }}
                     </a>
                 </li>
             </ul>
