Cambiado cálculo modelo 130
- Modelo 130 obteniendo facturas desde el inicio del año y no solo del trimestre elegido, así como descripción copia/pega de Hacienda explicando que es un acumulativo

- Modificados textos explicativos de campos para adaptarse al modelo así como traducciones (eliminando variable del 111 que aquí no se usaba y añadiendo otras traducciones que estaban directamente en el código)

- Agregados nuevos campos presentes del modelo (rendimiento neto, tras aplicar %, retenciones soportadas y positivos de trimestres anteriores)

- Modificada fórmula para tener en cuenta la seguridad social como gastos deducibles, las retenciones soportadas y los trimestres anteriores positivos

- TODO: Están creadas las variables de segSocial y positivosTrimestres pero no obtienen los datos. Hay que obtenerlo del correspondiente asiento o dejar que el usuario lo introduzca a mano

--- a/View/Modelo130.html.twig
+++ b/View/Modelo130.html.twig
@@ -72,6 +72,9 @@
                     <h2 class="h3 mt-3">
                         <i class="far fa-clipboard fa-fw"></i> {{ i18n.trans('summary') }} {#Resumen#}
                     </h2>
+					<p>
+                        {{ i18n.trans('model-130-r') }} {#Ponemos la parrafada de que es el modelo 130#}
+                    </p>
                 </div>
             </div>
 
@@ -79,36 +82,31 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        {{ i18n.trans('tax-base') }}
-                        -
-                        {{ i18n.trans('sales') }}
+                        {{ i18n.trans('tax-incomes') }}
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">01</span>
                             </div>
-                            <input type="number" value="{{ fsc.taxbaseFtrasClientes }}" class="form-control text-right" readonly="true" /> {#Base Imponible#}
+                            <input type="number" value="{{ fsc.taxbaseIngresos }}" class="form-control text-right" readonly="true" /> {#Base Imponible#}
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="form-group">
-                        {{ i18n.trans('tax-base') }}
-                        -
-                        {{ i18n.trans('purchases') }}
+                        {{ i18n.trans('tax-expenses') }}
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">02</span>
                             </div>
-                            <input type="number" value="{{ fsc.taxbaseFtrasProveedores }}" class="form-control text-right" readonly="true" />
+                            <input type="number" value="{{ fsc.taxbaseGastos }}" class="form-control text-right" readonly="true" />
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="form-group">
-                        {#{{ i18n.trans('tax-base') }}#}
-                        {{ i18n.trans('sales') }} - {{ i18n.trans('purchases') }}
+                        {{ i18n.trans('net-total') }}
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">03</span>
@@ -126,21 +124,59 @@
                         </div>
                     </div>
                 </div>
-                            
-                <div class="col">
+            </div>
+			
+			{#Segunda fila donde se calculará en rendimiento total#} 
+			<div class="row">
+				<div class="col">
                     <div class="form-group">
-                        {{ fsc.todeduct }}% sobre casilla 03
-                        {#{{ i18n.trans('result') }}#}
+                        {{ fsc.todeduct }}% {{ i18n.trans('after-deduct') }}
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">04</span>
                             </div>
-                            <input type="number" value="{{ fsc.result }}" class="form-control text-right" readonly="true" />
+                            <input type="number" value="{{ fsc.afterdeduct }}" class="form-control text-right" readonly="true" />
                         </div>
-                        Si da pérdidas (negativo) = 0
                     </div>
                 </div>
-            </div>
+				
+				<div class="col">
+                    <div class="form-group">
+                        {{ i18n.trans('retentions') }}
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">05</span>
+                            </div>
+                            <input type="number" value="{{ fsc.taxbaseRetenciones }}" class="form-control text-right" readonly="true" />
+                        </div>
+                    </div>
+                </div>
+				
+				<div class="col">
+                    <div class="form-group">
+                        {{ i18n.trans('previous-model') }}
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">06</span>
+                            </div>
+                            <input type="number" value="{{ fsc.positivosTrimestres }}" class="form-control text-right" readonly="true" />
+                        </div>
+                    </div>
+                </div>
+				
+				<div class="col">
+                    <div class="form-group">
+                        {{ i18n.trans('result') }}
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">07</span>
+                            </div>
+                            <input type="number" value="{{ fsc.result }}" class="form-control text-right" readonly="true" />
+                        </div>
+						{{ i18n.trans('tax-negative-info') }}
+                    </div>
+                </div>
+			</div>
 
             {#Creamos las pestañas de Ftras de clientes y proveedores#}
             <ul class="nav nav-tabs" id="myTab" role="tablist">
