Tarea #2652 - Corregidas las fechas a como estaban antes.

--- a/View/Modelo130.html.twig
+++ b/View/Modelo130.html.twig
@@ -57,7 +57,10 @@
                     <h2 class="h3 mt-3">
                         <i class="far fa-clipboard fa-fw"></i> {{ trans('summary') }}
                     </h2>
-                    <p>{{ trans('model-130-r') }}</p>
+                    <div class="alert alert-info">
+                        <p class="mb-0">{{ trans('model-130-r') }}</p>
+                        <p class="mb-0">{{ trans('model-130-desc') }}</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
